增加域名映射管理功能
