# openapi.yaml
@@ -3,17 +3,68 @@
 
 openapi: 3.0.3
 info:
-    title: QueueTask API
+    title: DomainBinding API
     version: 0.0.1
 paths:
-    /v1/queue/task:
+    /v1/domain-binding:
         get:
             tags:
-                - QueueTask
-            description: 查询队列任务
-            operationId: QueueTask_GetAgentTask
+                - DomainBinding
+            operationId: DomainBinding_ListDomainBinding
             parameters:
-                - name: id
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: size
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListDomainBindingReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        post:
+            tags:
+                - DomainBinding
+            operationId: DomainBinding_CreateDomainBinding
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateDomainBindingRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateDomainBindingReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/domain-binding/nslookup:
+        get:
+            tags:
+                - DomainBinding
+            operationId: DomainBinding_NsLookup
+            parameters:
+                - name: domain
                   in: query
                   schema:
                     type: string
@@ -23,7 +74,31 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/QueueTaskGetResponse'
+                                $ref: '#/components/schemas/NsLookupReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /v1/domain-binding/{id}:
+        get:
+            tags:
+                - DomainBinding
+            operationId: DomainBinding_GetDomainBinding
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetDomainBindingReply'
                 default:
                     description: Default error response
                     content:
@@ -32,14 +107,19 @@ paths:
                                 $ref: '#/components/schemas/Status'
         put:
             tags:
-                - QueueTask
-            description: 更新任务状态
-            operationId: QueueTask_UpdateAgentTask
+                - DomainBinding
+            operationId: DomainBinding_UpdateDomainBinding
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/QueueTaskUpdateRequest'
+                            $ref: '#/components/schemas/UpdateDomainBindingRequest'
                 required: true
             responses:
                 "200":
@@ -47,7 +127,30 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/QueueTaskUpdateResponse'
+                                $ref: '#/components/schemas/UpdateDomainBindingReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        delete:
+            tags:
+                - DomainBinding
+            operationId: DomainBinding_DeleteDomainBinding
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteDomainBindingReply'
                 default:
                     description: Default error response
                     content:
@@ -56,15 +159,7 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        GoogleProtobufAny:
-            type: object
-            properties:
-                '@type':
-                    type: string
-                    description: The type of the serialized message.
-            additionalProperties: true
-            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
-        QueueTaskGetResponse:
+        CreateDomainBindingReply:
             type: object
             properties:
                 code:
@@ -73,18 +168,22 @@ components:
                 message:
                     type: string
                 data:
-                    $ref: '#/components/schemas/QueueTaskVo'
-        QueueTaskUpdateRequest:
+                    type: string
+        CreateDomainBindingRequest:
             type: object
             properties:
-                id:
+                computeInstanceId:
                     type: string
-                agentId:
+                networkMappingId:
                     type: string
-                status:
+                name:
+                    type: string
+                domain:
+                    type: string
+                gatewayPort:
                     type: integer
-                    format: enum
-        QueueTaskUpdateResponse:
+                    format: int32
+        DeleteDomainBindingReply:
             type: object
             properties:
                 code:
@@ -92,21 +191,81 @@ components:
                     format: int32
                 message:
                     type: string
-        QueueTaskVo:
+        DomainBindingPageResponse:
+            type: object
+            properties:
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/DomainBindingVO'
+                total:
+                    type: integer
+                    format: int64
+                page:
+                    type: integer
+                    format: int32
+                size:
+                    type: integer
+                    format: int32
+        DomainBindingVO:
             type: object
             properties:
                 id:
                     type: string
-                agentId:
+                computeInstanceId:
                     type: string
-                cmd:
-                    type: integer
-                    format: enum
-                params:
+                networkMappingId:
                     type: string
-                status:
+                name:
+                    type: string
+                domain:
+                    type: string
+                gatewayPort:
                     type: integer
-                    format: enum
+                    format: int32
+                createTime:
+                    type: integer
+                    format: int64
+        GetDomainBindingReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/DomainBindingVO'
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListDomainBindingReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/DomainBindingPageResponse'
+        NsLookupReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                data:
+                    type: array
+                    items:
+                        type: string
         Status:
             type: object
             properties:
@@ -123,5 +282,29 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateDomainBindingReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+        UpdateDomainBindingRequest:
+            type: object
+            properties:
+                id:
+                    type: string
+                computeInstanceId:
+                    type: string
+                networkMappingId:
+                    type: string
+                name:
+                    type: string
+                domain:
+                    type: string
+                gatewayPort:
+                    type: integer
+                    format: int32
 tags:
-    - name: QueueTask
+    - name: DomainBinding
